# barcodereader

./: README  barcodereader.pml  manifest.xml
BarcodeReader/: BarcodeReader.pml  manifest.xml
BarcodeReader/lib/: barcodereader.py
lib/: barcodereader-service.py
zbar/: CMakeLists.txt
zbar/barcodereader/: qiproject.xml
zbar/barcodereader/.qi/: path.conf
zbar/barcodereader/build-ctctoolchain/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
zbar/barcodereader/build-ctctoolchain25/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
zbar/barcodereader/build-ctctoolchain25/sdk/share/qi/: path.conf
zbar/barcodereader/build-myfirsttoolchain/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
zbar/barcodereader/build-myfirsttoolchain/sdk/share/qi/: path.conf
zbar/barcodereader/build-sys-linux-x86_64/: CMakeCache.txt  dependencies.cmake
zbar/barcodereader/build-sys-linux-x86_64/sdk/share/qi/: path.conf
zbar/barcodereader/python/: imagescanner.c
zbar/python/: imagescanner.c
zbar/zbar-generated/: config.h
